--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,7 @@ version = "0.1.0"
 description = "Calculate input impedance of tubes"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = ["numpy"]
+dependencies = [
+    "ipykernel>=7.0.1",
+    "numpy",
+]
