--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "ipykernel>=7.0.1",
+    "matplotlib>=3.10.7",
     "numpy",
 ]
