--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -110,7 +110,7 @@ jobs:
         if: runner.os == 'Windows'
         shell: msys2 {0}
         run: |
-          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install --upgrade pip setuptools wheel build --break-system-packages
 
       # Build calcimp-python
       - name: Build calcimp-python (Ubuntu/macOS)
@@ -155,9 +155,7 @@ jobs:
         env:
           CEPHES_PATH: ../cephes_lib
         run: |
-          python -m pip install --upgrade --force-reinstall pip --break-system-packages
-          pip install build --break-system-packages
-          python -m build --wheel
+          python -m build --wheel --no-isolation
 
       # Upload wheel artifacts
       - name: Upload wheel artifacts
